--- a/mia/Base.lproj/Login.storyboard
+++ b/mia/Base.lproj/Login.storyboard
@@ -424,20 +424,20 @@
                                 </connections>
                             </containerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="说明：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n8A-3r-ob2">
-                                <rect key="frame" x="30" y="452" width="260" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <rect key="frame" x="30" y="464" width="260" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.注册时你将收到验证短信，Mia绝不会在任何途径泄露你的手机号码和个人信息。" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="260" translatesAutoresizingMaskIntoConstraints="NO" id="L4d-XM-O9y">
-                                <rect key="frame" x="30" y="470" width="260" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <rect key="frame" x="30" y="480" width="260" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2.注册和登录均代表你已阅读并同意《Mia音乐软件使用协议》" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="260" translatesAutoresizingMaskIntoConstraints="NO" id="ipP-NU-eBF" customClass="TTTAttributedLabel">
-                                <rect key="frame" x="30" y="504" width="260" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <rect key="frame" x="30" y="509" width="260" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <connections>
@@ -668,6 +668,67 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="avy-F4-BRd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="622" y="231"/>
+        </scene>
+        <!--HXUserTermsViewController-->
+        <scene sceneID="UE6-a9-9co">
+            <objects>
+                <viewController storyboardIdentifier="HXUserTermsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="efT-Zx-Bg0" userLabel="HXUserTermsViewController" customClass="HXUserTermsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UvV-L9-Viq"/>
+                        <viewControllerLayoutGuide type="bottom" id="ftC-DX-7Yv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="T0k-dL-MUn">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mia用户使用条款" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B3L-IG-aSC">
+                                <rect key="frame" x="99" y="28" width="122" height="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DRD-Jf-4gv">
+                                <rect key="frame" x="252" y="23" width="60" height="30"/>
+                                <state key="normal" title="我知道了"/>
+                                <connections>
+                                    <action selector="iKnowButtonPressed" destination="efT-Zx-Bg0" eventType="touchUpInside" id="dJy-w3-rZt"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VRZ-PS-35g">
+                                <rect key="frame" x="0.0" y="57" width="320" height="1"/>
+                                <color key="backgroundColor" red="0.69019607839999997" green="0.69019607839999997" blue="0.69019607839999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="S8x-2E-Zla"/>
+                                </constraints>
+                            </view>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3o4-4p-7bJ">
+                                <rect key="frame" x="0.0" y="58" width="320" height="510"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="VRZ-PS-35g" secondAttribute="trailing" id="DMZ-Lr-UBz"/>
+                            <constraint firstAttribute="trailing" secondItem="3o4-4p-7bJ" secondAttribute="trailing" id="QKe-oE-kaZ"/>
+                            <constraint firstItem="3o4-4p-7bJ" firstAttribute="top" secondItem="VRZ-PS-35g" secondAttribute="bottom" id="ReP-7I-d7j"/>
+                            <constraint firstItem="ftC-DX-7Yv" firstAttribute="top" secondItem="3o4-4p-7bJ" secondAttribute="bottom" id="WjV-0R-SCT"/>
+                            <constraint firstItem="3o4-4p-7bJ" firstAttribute="leading" secondItem="T0k-dL-MUn" secondAttribute="leading" id="YdH-da-CC0"/>
+                            <constraint firstItem="B3L-IG-aSC" firstAttribute="centerX" secondItem="T0k-dL-MUn" secondAttribute="centerX" id="afd-hq-67b"/>
+                            <constraint firstItem="3o4-4p-7bJ" firstAttribute="top" secondItem="B3L-IG-aSC" secondAttribute="bottom" constant="10" id="e4p-pQ-vTn"/>
+                            <constraint firstItem="B3L-IG-aSC" firstAttribute="top" secondItem="T0k-dL-MUn" secondAttribute="top" constant="28" id="fFG-Fo-lnx"/>
+                            <constraint firstItem="DRD-Jf-4gv" firstAttribute="centerY" secondItem="B3L-IG-aSC" secondAttribute="centerY" id="hlg-5h-ZPR"/>
+                            <constraint firstAttribute="trailing" secondItem="DRD-Jf-4gv" secondAttribute="trailing" constant="8" id="lAJ-tz-Aei"/>
+                            <constraint firstItem="VRZ-PS-35g" firstAttribute="leading" secondItem="T0k-dL-MUn" secondAttribute="leading" id="mEZ-hO-sZ1"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="titleLabel" destination="B3L-IG-aSC" id="Dqy-Vk-SSS"/>
+                        <outlet property="webView" destination="3o4-4p-7bJ" id="wMq-I0-gZJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3MS-n9-S1e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="192" y="904"/>
         </scene>
     </scenes>
     <resources>
