--- a/mia/Base.lproj/Profile.storyboard
+++ b/mia/Base.lproj/Profile.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
@@ -143,12 +142,12 @@
                                             <rect key="frame" x="8" y="8" width="304" height="212"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="好喜欢里面的编曲" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="284" translatesAutoresizingMaskIntoConstraints="NO" id="VZc-kF-vNu">
-                                                    <rect key="frame" x="10" y="14" width="284" height="29"/>
+                                                    <rect key="frame" x="10" y="12" width="284" height="33"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2015-12031 分享了：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSc-wG-GHP">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2015-12031" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSc-wG-GHP">
                                                     <rect key="frame" x="10" y="49" width="284" height="17"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="17" id="kk8-Nj-nga"/>
@@ -167,18 +166,36 @@
                                                                 <constraint firstAttribute="width" secondItem="5Az-Ky-gZ6" secondAttribute="height" multiplier="1:1" id="Cl2-JV-SLg"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pramore" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zep-6s-mp4">
-                                                            <rect key="frame" x="120" y="26" width="156" height="22"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A-Lin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xVD-2g-1IU">
-                                                            <rect key="frame" x="120" y="52" width="156" height="18"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                            <color key="textColor" red="0.62745098039215685" green="0.62745098039215685" blue="0.62745098039215685" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wvw-MT-H97">
+                                                            <rect key="frame" x="115" y="32" width="161" height="37"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pramore" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="161" translatesAutoresizingMaskIntoConstraints="NO" id="Zep-6s-mp4">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="161" height="20"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="40" id="Icw-A0-l5z"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A-Lin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xVD-2g-1IU">
+                                                                    <rect key="frame" x="0.0" y="20" width="161" height="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                    <color key="textColor" red="0.62745098039215685" green="0.62745098039215685" blue="0.62745098039215685" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="trailing" secondItem="xVD-2g-1IU" secondAttribute="trailing" id="9ow-Qd-6rM"/>
+                                                                <constraint firstItem="xVD-2g-1IU" firstAttribute="top" secondItem="Zep-6s-mp4" secondAttribute="bottom" id="HfG-mQ-Xbg"/>
+                                                                <constraint firstItem="Zep-6s-mp4" firstAttribute="top" secondItem="Wvw-MT-H97" secondAttribute="top" id="UCV-9T-UVm"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Zep-6s-mp4" secondAttribute="trailing" id="Uhz-9B-zjn"/>
+                                                                <constraint firstAttribute="bottom" secondItem="xVD-2g-1IU" secondAttribute="bottom" id="WZs-zE-Viq"/>
+                                                                <constraint firstItem="Zep-6s-mp4" firstAttribute="leading" secondItem="Wvw-MT-H97" secondAttribute="leading" id="Wma-Wl-Kxb"/>
+                                                                <constraint firstItem="xVD-2g-1IU" firstAttribute="leading" secondItem="Wvw-MT-H97" secondAttribute="leading" id="p6D-LX-xh6"/>
+                                                            </constraints>
+                                                        </view>
                                                         <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uAf-lM-nYa">
                                                             <rect key="frame" x="33" y="33" width="35" height="35"/>
                                                             <state key="normal" image="M-PlayIcon"/>
@@ -189,17 +206,14 @@
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.95686274509803915" green="0.95686274509803915" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstItem="Zep-6s-mp4" firstAttribute="leading" secondItem="5Az-Ky-gZ6" secondAttribute="trailing" constant="20" id="3th-rt-mgC"/>
                                                         <constraint firstAttribute="bottom" secondItem="5Az-Ky-gZ6" secondAttribute="bottom" id="6qD-6M-s8e"/>
-                                                        <constraint firstItem="xVD-2g-1IU" firstAttribute="trailing" secondItem="Zep-6s-mp4" secondAttribute="trailing" id="760-ku-0rF"/>
-                                                        <constraint firstItem="Zep-6s-mp4" firstAttribute="bottom" secondItem="5Az-Ky-gZ6" secondAttribute="centerY" constant="-2" id="EjB-kO-2XI"/>
+                                                        <constraint firstItem="Wvw-MT-H97" firstAttribute="centerY" secondItem="Brc-9e-1li" secondAttribute="centerY" id="JbL-GF-z9G"/>
                                                         <constraint firstAttribute="height" constant="100" id="MwF-5K-VVq"/>
-                                                        <constraint firstAttribute="trailing" secondItem="Zep-6s-mp4" secondAttribute="trailing" constant="8" id="PMb-zH-ZfN"/>
-                                                        <constraint firstItem="xVD-2g-1IU" firstAttribute="leading" secondItem="Zep-6s-mp4" secondAttribute="leading" id="Qsr-DH-ugs"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Wvw-MT-H97" secondAttribute="trailing" constant="8" id="QiA-7R-h1K"/>
                                                         <constraint firstItem="5Az-Ky-gZ6" firstAttribute="top" secondItem="Brc-9e-1li" secondAttribute="top" id="UXF-eQ-m8I"/>
                                                         <constraint firstItem="5Az-Ky-gZ6" firstAttribute="leading" secondItem="Brc-9e-1li" secondAttribute="leading" id="gwt-tR-B1S"/>
                                                         <constraint firstItem="uAf-lM-nYa" firstAttribute="centerY" secondItem="5Az-Ky-gZ6" secondAttribute="centerY" id="inY-0F-kCI"/>
-                                                        <constraint firstItem="xVD-2g-1IU" firstAttribute="top" secondItem="5Az-Ky-gZ6" secondAttribute="centerY" constant="2" id="nJT-47-2bG"/>
+                                                        <constraint firstItem="Wvw-MT-H97" firstAttribute="leading" secondItem="5Az-Ky-gZ6" secondAttribute="trailing" constant="15" id="p4f-pb-AXr"/>
                                                         <constraint firstItem="uAf-lM-nYa" firstAttribute="centerX" secondItem="5Az-Ky-gZ6" secondAttribute="centerX" id="uqX-bL-nWT"/>
                                                     </constraints>
                                                 </view>
@@ -215,7 +229,7 @@
                                                     </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M1g-uG-kgN">
-                                                    <rect key="frame" x="40" y="182" width="31" height="20"/>
+                                                    <rect key="frame" x="42" y="182" width="31" height="20"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="P-CommentIcon" translatesAutoresizingMaskIntoConstraints="NO" id="nNN-ao-YqG">
                                                             <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
@@ -250,7 +264,7 @@
                                                     </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sz4-nF-Yln">
-                                                    <rect key="frame" x="81" y="182" width="31" height="20"/>
+                                                    <rect key="frame" x="85" y="182" width="31" height="20"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="P-SeeIcon" translatesAutoresizingMaskIntoConstraints="NO" id="ufy-EA-sr9">
                                                             <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
@@ -285,13 +299,13 @@
                                                 <constraint firstItem="Xm4-bL-pTE" firstAttribute="top" secondItem="Brc-9e-1li" secondAttribute="bottom" id="BhK-9b-uuB"/>
                                                 <constraint firstAttribute="bottom" secondItem="GCj-Rv-su9" secondAttribute="bottom" id="CSm-bd-T7R"/>
                                                 <constraint firstItem="OSc-wG-GHP" firstAttribute="trailing" secondItem="VZc-kF-vNu" secondAttribute="trailing" id="FfX-3i-4LQ"/>
-                                                <constraint firstItem="OSc-wG-GHP" firstAttribute="top" secondItem="VZc-kF-vNu" secondAttribute="bottom" constant="6" id="GfG-we-NT7"/>
-                                                <constraint firstItem="Sz4-nF-Yln" firstAttribute="leading" secondItem="M1g-uG-kgN" secondAttribute="trailing" constant="10" id="HCR-ad-y5X"/>
+                                                <constraint firstItem="OSc-wG-GHP" firstAttribute="top" secondItem="VZc-kF-vNu" secondAttribute="bottom" constant="4" id="GfG-we-NT7"/>
+                                                <constraint firstItem="Sz4-nF-Yln" firstAttribute="leading" secondItem="M1g-uG-kgN" secondAttribute="trailing" constant="12" id="HCR-ad-y5X"/>
                                                 <constraint firstItem="Brc-9e-1li" firstAttribute="top" secondItem="OSc-wG-GHP" secondAttribute="bottom" constant="6" id="Pt0-kB-axt"/>
-                                                <constraint firstItem="VZc-kF-vNu" firstAttribute="top" secondItem="Qe8-TQ-eDn" secondAttribute="top" constant="14" id="SXl-Me-q03"/>
+                                                <constraint firstItem="VZc-kF-vNu" firstAttribute="top" secondItem="Qe8-TQ-eDn" secondAttribute="top" constant="12" id="SXl-Me-q03"/>
                                                 <constraint firstItem="VZc-kF-vNu" firstAttribute="leading" secondItem="Qe8-TQ-eDn" secondAttribute="leading" constant="10" id="ThC-sU-0e0"/>
                                                 <constraint firstItem="Brc-9e-1li" firstAttribute="leading" secondItem="OSc-wG-GHP" secondAttribute="leading" id="cjS-OC-SPm"/>
-                                                <constraint firstItem="M1g-uG-kgN" firstAttribute="leading" secondItem="Xm4-bL-pTE" secondAttribute="trailing" id="fO8-EF-4OZ"/>
+                                                <constraint firstItem="M1g-uG-kgN" firstAttribute="leading" secondItem="Xm4-bL-pTE" secondAttribute="trailing" constant="2" id="fO8-EF-4OZ"/>
                                                 <constraint firstAttribute="bottom" secondItem="Xm4-bL-pTE" secondAttribute="bottom" id="kPQ-gq-wc4"/>
                                                 <constraint firstItem="GCj-Rv-su9" firstAttribute="top" secondItem="Brc-9e-1li" secondAttribute="bottom" id="rxP-1d-RUX"/>
                                                 <constraint firstItem="OSc-wG-GHP" firstAttribute="leading" secondItem="VZc-kF-vNu" secondAttribute="leading" id="tc0-PO-1LJ"/>
